@@ -2,7 +2,7 @@
   "Group": "Payment methods",
   "FriendlyName": "Dpo",
   "SystemName": "Payments.Dpo",
-  "Version": "4.5.0",
+  "Version": "4.5.1",
   "SupportedVersions": [ "4.50" ],
   "Author": "App Inlet (Pty) Ltd",
   "DisplayOrder": 1,
