@@ -2,4 +2,6 @@
 Date	  : Version: Description
 =====================================
 
+2024-05-28: v4.5.1 : Fix response body flush failing to redirect.
+
 2022-05-06: v4.5.0 : Initial release.
